Font fixes, autocomplete load more styles and improvement on contrast

--- a/static/custom_dc/custom/overrides.css
+++ b/static/custom_dc/custom/overrides.css
@@ -19,7 +19,10 @@
   --link-color: #514ea3;
   --footer-background: white;
   --dc-red-fade: #40d4e033;
-  --font-family: "Open Sans", Arial, sans-serif; /* Setup at base.html **/
+  /* 
+  * TODO: Update the font stack when custom fonts are added, and replace the use of font-family elements. 
+  */
+  --font-family: "Open Sans", "Roboto", "Segoe UI", "Helvetica Neue", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", Arial, -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
 }
 
 html, body {
